--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="heading">Input the color or the radius of your choice</h1>
         <section id="section"></section>
         <div class="input">
-            <input type="text" name="input" id="input">
+            <input type="text" name="input" id="input" placeholder="Enter a Color or a border radius measurment">
         </div>
     </body>
 </html>
